def/grammar.txt
program             :   statement_list
statement_list      :   (expr SEMI)*
expr                :   operator COLON LPAREN (expr (COMMA, expr)*)? RPAREN  | lambda_expr | set_expr | ID | STRING | NUMBER
lambda_expr         :   LAMBDA COLON LPAREN lambda_args COMMA lambda_body RPAREN
lambda_args         :   LPAREN (ID (COMMA ID)*)? RPAREN
lambda_body         :   LPAREN statement_list RPAREN
set_expr            :   SET COLON LPAREN ID COMMA expr RPAREN
operator            :   ID | LPAREN lambda_expr RPAREN | arith_op
arith_op            :   PLUS | MINUS | MUL | DIV | MOD
